@@ -1,3 +1,9 @@
+2010-01-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/ao_tasks.c:
+   Move the code for creating a new task into create_task().
+
+
 2010-01-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/*.c, src/*.h:
